@@ -27,6 +27,7 @@ Fixes:
    objects in the same location with an @listen of *. It now does so again.
    Reported by Xeero and Padraic. [MG]
  * Loading a reboot db is more robust. Inspired by Padraic. [SW]
+ * scan() couldn't be used by rooms. Reported by Padraic. [MG]
 
 Minor changes:
  * Logged messages now have events in the LOG tree. Suggested by
